gray-release/gray-release-platform/deploy/k8s/demo-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-order-v1
  namespace: gray-release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-order
      version: v1
  template:
    metadata:
      labels:
        app: demo-order
        version: v1
    spec:
      containers:
        - name: demo-order-v1
          image: demo-order-v1:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 18081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-order-v2
  namespace: gray-release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-order
      version: v2
  template:
    metadata:
      labels:
        app: demo-order
        version: v2
    spec:
      containers:
        - name: demo-order-v2
          image: demo-order-v2:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 18082
---
apiVersion: v1
kind: Service
metadata:
  name: demo-order
  namespace: gray-release
spec:
  selector:
    app: demo-order
  ports:
    - name: http
      port: 80
      targetPort: http
